--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ngrx/effects": "^4.1.0",
     "@ngrx/store": "^4.1.0",
     "@ngrx/store-devtools": "^4.0.0",
+    "angular2-text-mask": "^8.0.4",
+    "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
