--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^3.3.7",
     "v-mask": "^1.3.0",
     "vue": "^2.4.4",
-    "vue-resource": "^1.3.4"
+    "vue-resource": "^1.3.4",
+    "vuelidate": "^0.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
