--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "socket.io-client": "^2.0.4",
     "v-mask": "^1.3.0",
     "vue": "^2.4.4",
     "vue-resource": "^1.3.4",
+    "vue-socket.io": "^2.1.1-a",
     "vuelidate": "^0.6.1"
   },
   "devDependencies": {
