--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "@ngrx/effects": "^4.1.0",
     "@ngrx/store": "^4.1.0",
     "@ngrx/store-devtools": "^4.0.0",
+    "angular2-moment": "^1.7.0",
     "angular2-text-mask": "^8.0.4",
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
-    "moment": "^2.19.3",
+    "moment": "^2.19.4",
     "ng2-date-picker": "^2.6.2",
     "rxjs": "^5.4.2",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
