--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "moment": "^2.19.3",
     "ng2-date-picker": "^2.6.2",
     "rxjs": "^5.4.2",
+    "socket.io": "^2.0.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
