--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "socket.io-client": "^2.0.4",
     "v-mask": "^1.3.0",
     "vue": "^2.4.4",
+    "vue-localstorage": "^0.5.0",
     "vue-resource": "^1.3.4",
     "vue-socket.io": "^2.1.1-a",
     "vuelidate": "^0.6.1"
