--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "laravel-echo-server": "^1.3.3",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "socket.io-client": "^2.0.4",
     "v-mask": "^1.3.0",
     "vue": "^2.4.4",
