--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng2-date-picker": "^2.6.2",
     "rxjs": "^5.4.2",
     "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
