--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "v-mask": "^1.3.0",
     "vue": "^2.4.4",
     "vue-localstorage": "^0.5.0",
+    "vue-ls": "^2.3.3",
     "vue-resource": "^1.3.4",
     "vue-socket.io": "^2.1.1-a",
     "vuelidate": "^0.6.1"
