--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "laravel-echo-server": "^1.3.3",
+    "moment": "^2.19.4",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "socket.io-client": "^2.0.4",
     "v-mask": "^1.3.0",
     "vue": "^2.4.4",
+    "vue-awesome": "^2.3.4",
     "vue-localstorage": "^0.5.0",
     "vue-ls": "^2.3.3",
     "vue-resource": "^1.3.4",
+    "vue-router": "^3.0.1",
     "vue-socket.io": "^2.1.1-a",
     "vuelidate": "^0.6.1"
   },
