--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
+    },
+    "dependencies": {
+        "axios": "^0.16.2",
+        "express": "^4.16.2",
+        "socket.io": "^2.0.4"
     }
 }
