--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "css-loader": "^0.28.7",
     "laravel-echo-server": "^1.3.3",
     "moment": "^2.19.4",
+    "postcss-loader": "^2.0.9",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "socket.io-client": "^2.0.4",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
     "v-mask": "^1.3.0",
     "vue": "^2.4.4",
     "vue-awesome": "^2.3.4",
+    "vue-chat-scroll": "^1.2.1",
     "vue-localstorage": "^0.5.0",
     "vue-ls": "^2.3.3",
     "vue-resource": "^1.3.4",
@@ -32,6 +37,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "style-loader": "^0.19.1",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
