--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ionicons": "^3.0.0",
     "moment": "^2.19.4",
     "ng2-date-picker": "^2.6.2",
+    "ngx-pagination": "^3.0.3",
     "rxjs": "^5.4.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
