--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
     "moment": "^2.19.4",
+    "ng2-search-filter": "^0.4.7",
+    "ngx-order-pipe": "^2.0.1",
+    "ngx-pagination": "^3.1.1",
     "rxjs": "^5.4.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
