--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/effects": "^4.1.0",
     "@ngrx/store": "^4.1.0",
     "@ngrx/store-devtools": "^4.0.0",
+    "amazing-time-picker": "^1.5.3",
     "angular2-moment": "^1.7.0",
     "angular2-text-mask": "^8.0.4",
     "animate.css": "^3.5.2",
@@ -32,6 +33,7 @@
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
     "moment": "^2.19.4",
+    "ng-pick-datetime": "^5.2.6",
     "ng2-search-filter": "^0.4.7",
     "ngx-order-pipe": "^2.0.1",
     "ngx-pagination": "^3.1.1",
