--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.19.4",
     "ng-pick-datetime": "^5.2.6",
     "ng2-search-filter": "^0.4.7",
+    "ngx-bootstrap": "^3.0.1",
     "ngx-order-pipe": "^2.0.1",
     "ngx-pagination": "^3.1.1",
     "rxjs": "^5.4.2",
