--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "angular2-text-mask": "^8.0.4",
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "intl": "^1.2.5",
     "ionicons": "^3.0.0",
     "moment": "^2.19.4",
     "ng-pick-datetime": "^5.2.6",
@@ -41,6 +43,7 @@
     "rxjs": "^5.4.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
