--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "web-animations-js": "^2.3.1",
+    "whatwg-fetch": "^2.0.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
