--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.19.4",
     "ng-pick-datetime": "^5.2.6",
     "ng2-search-filter": "^0.4.7",
+    "ng4-loading-spinner": "^1.2.3",
     "ngx-bootstrap": "^2.0.5",
     "ngx-order-pipe": "^2.0.1",
     "ngx-pagination": "^3.1.1",
