--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "moment": "^2.19.4",
     "ng-pick-datetime": "^5.2.6",
     "ng2-search-filter": "^0.4.7",
-    "ng4-loading-spinner": "1.0.27",
     "ngx-bootstrap": "^2.0.5",
     "ngx-order-pipe": "^2.0.1",
     "ngx-pagination": "^3.1.1",
+    "ngx-spinner": "^6.1.2",
     "rxjs": "^5.4.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
