--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "howler": "^2.0.15",
     "intl": "^1.2.5",
     "ionicons": "^3.0.0",
     "moment": "^2.19.4",
