--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ngx-order-pipe": "^2.0.1",
     "ngx-pagination": "^3.1.1",
     "ngx-spinner": "^6.1.2",
+    "ngx-sweetalert2": "^0.2.7",
     "rxjs": "^5.4.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
