--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "rxjs": "^5.4.2",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
+    "spin.js": "^4.0.0",
     "web-animations-js": "^2.3.1",
     "whatwg-fetch": "^2.0.4",
     "zone.js": "^0.8.14"
