--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "magyarjeti/mime-types": "^1.0",
         "twilio/sdk": "^5.15"
     },
     "require-dev": {
