--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "vue-widget",
-  "description": "A Vue.js project",
+  "description": "TMSMS chat Widget",
   "version": "1.0.0",
   "author": "Tier5 LLC <github@tier5.us>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot ",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "development": "cross-env NODE_ENV=development webpack-dev-server --open --hot ",
+    "production": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "staging": "cross-env NODE_ENV=staging webpack --progress --hide-modules"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
