--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "local": "cross-env NODE_ENV= webpack-dev-server --open --hot ",
-    "production": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "production": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "development": "cross-env NODE_ENV=development webpack --progress --hide-modules"
   },
   "dependencies": {
