--- a/package.json
+++ b/package.json
@@ -1,18 +1,35 @@
 {
   "name": "vue-widget",
-  "description": "A Vue.js project",
+  "description": "TMSMS chat Widget",
   "version": "1.0.0",
   "author": "Tier5 LLC <github@tier5.us>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "development": "cross-env NODE_ENV=development webpack-dev-server --open --hot ",
+    "production": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "staging": "cross-env NODE_ENV=staging webpack --progress --hide-modules"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "css-loader": "^0.28.7",
+    "laravel-echo-server": "^1.3.3",
+    "moment": "^2.19.4",
+    "postcss-loader": "^2.0.9",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "socket.io-client": "^2.0.4",
+    "style-loader": "^0.19.1",
+    "url-loader": "^0.6.2",
     "v-mask": "^1.3.0",
     "vue": "^2.4.4",
-    "vue-resource": "^1.3.4"
+    "vue-awesome": "^2.3.4",
+    "vue-chat-scroll": "^1.2.1",
+    "vue-localstorage": "^0.5.0",
+    "vue-ls": "^2.3.3",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-a",
+    "vuelidate": "^0.6.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -21,6 +38,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "style-loader": "^0.19.1",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
